$Id$

XML sitemap 6.x-1, 2009-06-10
-----------------------------------
#454190 Remove xmlsitemap_menu.module.
#458530 Module help page still referrs to XML sitemap term.
#458132 xmlsitemap_output() references a not initialized variable.
#485596 Database table is wrongly described as a xmlsitemap_term base table.
#484488 preg_match() versus is_numeric().
#484478 node_load($id) versus node_load($id, NULL, TRUE).
#484456 Remove xmlsitemap_api().
#466654 Change 'Submit the sitemap when updated' title and description.
#458710 Change unlink() for file_delete().
#459366 Remove hook_boot() and hook_exit().
#486230 Rename the hook_update_N _6000 to _6100 and remove the implementations
calling the _6000 implementation.
#487650 Indentation of the code is not correct.
#487850 Fix coding standard violations.

XML sitemap 6.x-1, 2009-06-09
-----------------------------------
#470534 Remove _xmlsitemap_revision().
#484454 Bug in PHP 5.1.2 with DATE_W3C.
#486450 Remove the check and call for hook_xmlsitemap_url().
#470790 Remove empty update functions.

XML sitemap 6.x-1, 2009-06-06
-----------------------------------
#483844 Restore code to beta0.

XML sitemap 6.x-1, 2009-05-26
-----------------------------------
#473790 by Dave Reid: Fixed missing return value in xmlsitemap_update_6143().
#472850: Install error on clean installation.

XML sitemap 6.x-1, 2009-05-25
-----------------------------------
#470790: Remove empty update functions.
#461570: Rearrange the tools page.

XML sitemap 6.x-1, 2009-05-23
-----------------------------------
#471400: The opening tag misses the '>' character.
#470974: Sitemap contains a wrong tag.
#470778: Constant floating numbers shown in the user interface must the translatable.
#470792: Translatable strings review.
#470670: drupal_unistall_schema() is not called from the uninstall functions.
#465658: Add more options to "cron limit" on settings page.
#466654: Change 'Submit the sitemap when updated' in 'Submit the sitemap on content updates'.